--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,5 +14,8 @@
   },
   "engines": {
     "node": "16.x"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
